# mcp-chaos

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  fault_scenario.md
.github/workflows/: ci.yml  release.yml
benchmarks/: openrouter_agent.py  run_openrouter_bench.py  run_repeated_bench.py
docs/: usage.md
docs/demo/: demo.tape  replay.py
docs/experiments/: 2026-07-03-claude-code-timeout.md  2026-07-03-claude-code-timeout.run.jsonl  2026-07-03-config-doctor.mcp.json  2026-07-03-config-doctor.md  2026-07-03-config-doctor.out.txt  2026-07-03-context-tax.fs-run.jsonl  2026-07-03-context-tax.local.json  2026-07-03-context-tax.md  2026-07-03-context-tax.remote.json  2026-07-03-correlate.honest.out.txt  2026-07-03-correlate.lie.final.txt  2026-07-03-correlate.lie.out.txt  2026-07-03-correlate.lie.run.jsonl  2026-07-03-correlate.md  2026-07-03-cross-agent-timeout.md  2026-07-03-cross-agent-timeout.results.json  2026-07-03-duplicate-write.answer.txt  2026-07-03-duplicate-write.faults.yaml  2026-07-03-duplicate-write.gate.out.txt  2026-07-03-duplicate-write.md  2026-07-03-duplicate-write.run.jsonl  2026-07-03-http-transport.faults.yaml  2026-07-03-http-transport.md  2026-07-03-http-transport.out.txt  2026-07-03-http-transport.run.jsonl  2026-07-03-openrouter-12-models.md  2026-07-03-openrouter-n5.md  2026-07-03-record-replay.cassette.jsonl  2026-07-03-record-replay.faults.yaml  2026-07-03-record-replay.md  2026-07-03-record-replay.record.out.txt  (+2 more)
examples/: README.md  dead-write-tool.yaml  faults.yaml  flaky-tool.yaml  prompt-injection.yaml
src/mcp_chaos/: checks.py  (+12 more)
tests/: mock_http_server.py  mock_server.py  test_checks.py  test_cli_fail_on.py  test_correlate.py  test_doctor.py  test_duplicate_writes.py  test_e2e.py  test_efficiency.py  test_http_relay.py  test_recorder.py  test_replay.py
(+17 files in other folders)
