[project]
name = "mcp-chaos"
version = "0.1.0"
description = "Chaos engineering for AI agents — a fault-injecting MCP proxy"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Min Liu", email = "max.liu2024@outlook.com" }]
keywords = ["mcp", "chaos-engineering", "ai-agents", "testing", "fault-injection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8"]

[project.urls]
Repository = "https://github.com/SmartAI/mcp-chaos"
Issues = "https://github.com/SmartAI/mcp-chaos/issues"

[project.scripts]
mcp-chaos = "mcp_chaos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_chaos"]
